--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=ims-school
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=2561996xyz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
